# caro-log

./: Cargo.toml  README.md  install.sh
caro-log-lib/: Cargo.toml
caro-log-service/: Cargo.toml
karo-log-common/: Cargo.toml
karo-log-common/src/: lib.rs  log_message.rs
karo-log-control/: Cargo.toml  install.sh  karo.log.control.service
karo-log-control/src/: main.rs
karo-log-lib/: Cargo.toml
karo-log-lib/examples/: log_example.rs
karo-log-lib/src/: lib.rs  logger.rs  logger_client.rs
karo-log-service/: Cargo.toml  com.log.service
karo-log-service/src/: main.rs
karo-log-service/systemd/: caro.log.service
karo-log-viewer/: Cargo.toml
karo-log-viewer/src/: colorizer.rs  file_trait.rs  lib.rs  live_log_file.rs  log_dir_entry.rs  log_directory_entry.rs  log_directory_reader.rs  log_file_trait.rs  log_registry.rs  log_window.rs  main.rs  rotated_file.rs  rotated_log_file.rs  screens.rs
karo-log-viewer/src/log_files/: log_window.rs  mod.rs  rotated_log_file.rs
karo-log-viewer/tests/: dir_reader_test.rs  registry_test.rs  rotated_log_test.rs  test_colors.rs  window_test.rs
karo-logger/: Cargo.toml  install.sh  karo.logger.service
karo-logger/src/: args.rs  logger.rs  main.rs  rotator.rs
karo-logger/systemd/: karo.logger.service
karo-logger/tests/: test_rotator.rs
krossbar-log-common/: Cargo.toml  README.md
krossbar-log-common/src/: lib.rs  log_message.rs  logger_interface.rs
krossbar-log-control/: Cargo.toml  Makefile.toml  README.md  README.tpl  install.sh  karo.log.control.service  krossbar.log.control.service
krossbar-log-control/src/: main.rs
krossbar-log-lib/: Cargo.toml  README.md  README.tpl
krossbar-log-lib/examples/: com.examples.logging.service  log_example.rs
krossbar-log-lib/src/: lib.rs  logger.rs  logger_client.rs  rpc.rs
krossbar-log-lib/tests/: fixture.rs  test_rpc.rs  test_stdout.rs
krossbar-log-viewer/: Cargo.toml  Makefile.toml  README.md  README.tpl
krossbar-log-viewer/src/: colorizer.rs  lib.rs  log_directory_entry.rs  log_directory_reader.rs  log_registry.rs  main.rs  screen.rs
krossbar-log-viewer/src/log_files/: live_log_file.rs  log_file_trait.rs  log_window.rs  mod.rs  rotated_log_file.rs
krossbar-log-viewer/tests/: dir_reader_test.rs  registry_test.rs  rotated_log_test.rs  window_test.rs
krossbar-logger/: Cargo.toml  Makefile.toml  README.md  README.tpl  install.sh  karo.logger.service  krossbar.logger.service
krossbar-logger/src/: args.rs  client.rs  lib.rs  logger.rs  main.rs  rotator.rs  self_logger.rs  service.rs  writer.rs
krossbar-logger/systemd/: karo.logger.service  krossbar.logger.service
krossbar-logger/tests/: test_rotator.rs  test_self_logger.rs
