[workspace]
resolver = "2"

members = [
    "krossbar-logger",
    "krossbar-log-lib",
    "krossbar-log-control",
    "krossbar-log-common",
    "krossbar-log-viewer",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"
authors = [
    "Alexander Smoktal <https://github.com/alexander-smoktal>",
    "Krossbar team",
]
license = "MIT"
repository = "https://github.com/krossbar-platform/krossbar-log"
homepage = "https://krossbar.rs"

[workspace.dependencies]
bson = "2.11"
chrono = "0.4"
clap = "4.5"
colored = "2.1"
env_filter = "0.1"
futures = "0.3"
log = "0.4"
rstest = "0.21"
serde = "1.0"
tempdir = "0.3"
tokio = "1.38"
tokio-util = "0.7"

krossbar-rpc = "0.5.7"
krossbar-log-common = "0.5.3"
krossbar-log-lib = "0.5.5"
krossbar-bus-lib = "0.5.7"
krossbar-bus-common = "0.5.0"
