[package]
name = "karo-log-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "0.4", features = ["std", "release_max_level_debug"] }
tokio = { version = "1.20", features = ["sync", "rt"] }

karo-bus-lib = { git = "https://github.com/karo-platform/karo-bus.git" }

karo-log-common = { path = "../karo-log-common" }
colored = "2.0"

[dev-dependencies]
tokio = { version = "1.20", features = ["rt-multi-thread", "signal"] }
