[package]
name = "karo-log-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.0"
log = { version = "0.4", features = ["std", "release_max_level_debug"] }
tokio = { version = "1.20", features = ["sync", "rt"] }

karo-bus-lib = { git = "https://github.com/karo-platform/karo-bus.git", features = [
    "simple-peer",
] }

karo-log-common = { path = "../karo-log-common" }

[dev-dependencies]
tokio = { version = "1.20", features = ["rt-multi-thread", "signal"] }
