[package]
name = "karo-log-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2", features = ["derive", "color"] }
log = "0.4"
tokio = { version = "1.20", features = ["macros", "rt-multi-thread", "signal"] }

karo-log-common = { path = "../karo-log-common" }
karo-log-lib = { path = "../karo-log-lib" }
