[package]
name = "karo-log-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
clap = { version = "3.2", features = ["derive", "color"] }
log = "0.4"
regex = "1.6"
tokio = { version = "1.20", features = ["macros", "rt-multi-thread", "signal"] }

karo-log-common = { path = "../karo-log-common" }
karo-log-lib = { path = "../karo-log-lib" }

[dev-dependencies]
pretty_env_logger = "0.4"
tempdir = "0.3"
