[package]
name = "karo-log-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
clap = { version = "3.2", features = ["derive", "color"] }
log = "0.4"
palette = "0.6"
rand = { version = "0.8", features = ["small_rng"] }
regex = "1.6"
termion = "1.5"

karo-log-common = { path = "../karo-log-common" }

[dev-dependencies]
karo-log-lib = { path = "../karo-log-lib" }
pretty_env_logger = "0.4"
tempdir = "0.3"
