[package]
name = "karo-logger"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2", features = ["derive", "color"] }
log = "0.4"
tokio = { version = "1.20", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "signal",
] }
chrono = "0.4"

karo-bus-lib = { git = "https://github.com/karo-platform/karo-bus.git" }

karo-log-common = { path = "../karo-log-common" }
karo-log-lib = { path = "../karo-log-lib" }

[dev-dependencies]
tempdir = "0.3.7"
tokio = { version = "1.19", features = ["fs", "signal"] }

karo-bus-hub = { git = "https://github.com/karo-platform/karo-bus.git" }
