[package]
name = "krossbar-log-common"
version = "0.5.0"
edition = "2021"
rust-version = "1.75"
authors = ["Alexander Smoktal <https://github.com/alexander-smoktal>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/krossbar-platform/krossbar-log"
homepage = "https://krossbar.rs"
description = """
Krossbar log common library
"""
categories = ["debugging"]
keywords = ["log", "debugging"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
log = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
