[package]
name = "krossbar-log-common"
version = "0.5.3"
readme = "README.md"
description = """
Krossbar log common library
"""
categories = ["development-tools"]
keywords = ["log", "debugging", "development-tools"]

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
chrono = { workspace = true, features = ["serde"] }
log = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
