[package]
name = "krossbar-log-control"
version = "0.5.0"
readme = "README.md"
description = """
Krossbar log control tool
"""
categories = ["development-tools"]
keywords = ["log", "logging", "logger"]

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive", "color"] }
env_filter = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
log = { workspace = true }

krossbar-bus-lib = { workspace = true }
krossbar-bus-common = { workspace = true }
krossbar-log-common = { workspace = true }
