[package]
name = "krossbar-log-lib"
version = "0.5.5"
edition = "2021"
rust-version = "1.75"
authors = ["Alexander Smoktal <https://github.com/alexander-smoktal>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/krossbar-platform/krossbar-log"
homepage = "https://krossbar.rs"
description = """
Krossbar log lib
"""
categories = ["development-tools"]
keywords = ["log", "logging", "logger"]

[dependencies]
bson = "2.10"
chrono = "0.4"
colored = "2.1"
futures = "0.3"
log = { version = "0.4", features = ["std", "release_max_level_debug"] }
serde = "1.0"
tokio = { version = "1.38", features = ["net", "sync", "rt", "io-util"] }

krossbar-rpc = { version = "0.5.7", features = ["impl-monitor"] }
krossbar-log-common = "0.5.3"

[dev-dependencies]
fork = "0.1"
rstest = "0.21"
tempdir = "0.3.7"
tokio = { version = "1.38", features = ["full"] }
tokio-util = "0.7.11"

krossbar-logger = { path = "../krossbar-logger" }
