[package]
name = "krossbar-log-lib"
version = "0.5.5"
readme = "README.md"
description = """
Krossbar log lib
"""
categories = ["development-tools"]
keywords = ["log", "logging", "logger"]

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
bson = { workspace = true }
chrono = { workspace = true }
colored = { workspace = true }
futures = { workspace = true }
log = { workspace = true, features = ["std", "release_max_level_debug"] }
serde = { workspace = true }
tokio = { workspace = true, features = ["net", "sync", "rt", "io-util"] }

krossbar-rpc = { workspace = true, features = ["impl-monitor"] }
krossbar-log-common = { workspace = true }

[dev-dependencies]
fork = "0.1"
rstest = { workspace = true }
tempdir = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }

krossbar-logger = { path = "../krossbar-logger" }
