[package]
name = "krossbar-log-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
clap = { version = "3.2", features = ["derive", "color"] }
log = "0.4"
palette = "0.6"
regex = "1.6"
termion = "1.5"

krossbar-log-common = { path = "../krossbar-log-common" }

[dev-dependencies]
krossbar-log-lib = { path = "../krossbar-log-lib" }
pretty_env_logger = "0.4"
tempdir = "0.3"
