[package]
name = "krossbar-log-viewer"
version = "0.5.3"
edition = "2021"
rust-version = "1.75"
authors = ["Alexander Smoktal <https://github.com/alexander-smoktal>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/krossbar-platform/krossbar-log"
homepage = "https://krossbar.rs"
description = """
Krossbar log viewer
"""
categories = ["development-tools"]
keywords = ["log", "logging", "logger"]

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "color"] }
env_filter = "0.1"
log = "0.4"
notify = "6.1"
palette = "0.7"
regex = "1.10"
termion = "4.0"

krossbar-log-common = "0.5.3"

[dev-dependencies]
krossbar-log-lib = "0.5.3"

pretty_env_logger = "0.4"
tempdir = "0.3"
