[package]
name = "krossbar-log-viewer"
version = "0.5.3"
readme = "README.md"
description = """
Krossbar log viewer
"""
categories = ["development-tools"]
keywords = ["log", "logging", "logger"]

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
chrono = { workspace = true }
clap = { version = "4.5", features = ["derive", "color"] }
env_filter = { workspace = true }
log = { workspace = true }
notify = "6.1"
palette = "0.7"
regex = "1.10"
termion = "4.0"

krossbar-log-common = { workspace = true }

[dev-dependencies]
pretty_env_logger = "0.4"
tempdir = { workspace = true }

krossbar-log-lib = { workspace = true }
