[package]
name = "krossbar-logger"
version = "0.5.0"
edition = "2021"
rust-version = "1.75"
authors = ["Alexander Smoktal <https://github.com/alexander-smoktal>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/krossbar-platform/krossbar-log"
homepage = "https://krossbar.rs"
description = """
Krossbar logger
"""
categories = ["development-tools"]
keywords = ["log", "debugging", "development-tools"]

[lib]
name = "krossbar_logger_lib"
path = "src/lib.rs"

[dependencies]
bson = "2.10"
clap = { version = "4.5", features = ["derive", "color"] }
futures = "0.3.30"
log = "0.4"
pretty_env_logger = "0.5.0"
tokio = { version = "1.37", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "signal",
] }
chrono = "0.4"

krossbar-bus-common = "0.5.0"
krossbar-rpc = "0.5.5"
krossbar-state-machine = "0.5.3"

krossbar-bus-lib = "0.5.6"
krossbar-log-common = "0.5.1"

[dev-dependencies]
tempdir = "0.3.7"
tokio = { version = "1.37", features = ["fs", "signal"] }
