[package]
name = "krossbar-logger"
version = "0.5.2"
edition = "2021"
rust-version = "1.75"
authors = ["Alexander Smoktal <https://github.com/alexander-smoktal>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/krossbar-platform/krossbar-log"
homepage = "https://krossbar.rs"
description = """
Krossbar logger
"""
categories = ["development-tools"]
keywords = ["log", "logging", "logger"]

[lib]
name = "krossbar_logger_lib"
path = "src/lib.rs"

[dependencies]
bson = "2.10"
clap = { version = "4.5", features = ["derive", "color"] }
futures = "0.3.30"
log = { version = "0.4", features = ["std"] }
env_filter = "0.1"
tokio = { version = "1.38", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "signal",
] }
chrono = "0.4"

krossbar-rpc = "0.5.6"
krossbar-state-machine = "0.5.3"

krossbar-log-common = "0.5.2"

[dev-dependencies]
tempdir = "0.3.7"
tokio = { version = "1.38", features = ["fs", "signal", "time"] }
