[package]
name = "krossbar-logger"
version = "0.5.6"
readme = "README.md"
description = """
Krossbar logger
"""
categories = ["development-tools"]
keywords = ["log", "logging", "logger"]

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = ["logger-service"]
logger-service = []

[lib]
name = "krossbar_logger_lib"
path = "src/lib.rs"

[dependencies]
bson = { workspace = true }
clap = { workspace = true, features = ["derive", "color"] }
futures = { workspace = true }
log = { workspace = true, features = ["std"] }
env_filter = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "signal",
] }
chrono = { workspace = true }

krossbar-bus-lib = { workspace = true }
krossbar-bus-common = { workspace = true }
krossbar-log-common = { workspace = true }
krossbar-rpc = { workspace = true }
krossbar-state-machine = "0.5.3"

[dev-dependencies]
tempdir = { workspace = true }
tokio = { workspace = true, features = ["fs", "signal", "time"] }
